--- a/tekton/src/pipelines/gitops/gitops-aiservice-deps.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-aiservice-deps.yml.j2
@@ -74,7 +74,7 @@ spec:
     - name: mas_app_channel_aiservice
       type: string
       default: ""
-    ### Added on Parameters
+    ################# Added on Parameters
     - name: allow_list
       type: string
     - name: auto_backup_aiservice
@@ -90,7 +90,19 @@ spec:
       description: Set to 'install' to set up a Db2 instance for AI Service
       default: "none"
 
-    # DB2 Parameters
+    ################# Gitops Parameters
+    - name: git_branch
+      type: string
+    - name: git_commit_msg
+      type: string
+    - name: github_host
+      type: string
+    - name: github_org
+      type: string
+    - name: github_repo
+      type: string  
+
+    ################# DB2 Parameters
     - name: db2_meta_storage_class
       type: string
     - name: db2_temp_storage_class
@@ -247,8 +259,6 @@ spec:
       type: string
     - name: db2_tls_version_aiservice
       type: string
-    - name: db2_tls_version_aiservice
-      type: string
     - name: db2_tolerate_key_aiservice
       type: string
     - name: db2_tolerate_value_aiservice
@@ -259,7 +269,10 @@ spec:
       type: string
     - name: region
       type: string
-
+    - name: db2_channel
+      type: string
+    - name: db2_tolerate_effect_aiservice
+      type: string
 
   tasks:
 {% if wait_for_provision == true %}
@@ -367,22 +380,8 @@ spec:
           value: $(params.account)
         - name: mas_instance_id
           value: $(params.mas_instance_id)
-        - name: git_branch
-          value: $(params.git_branch)
-        - name: github_org
-          value: $(params.github_org)
-        - name: github_repo
-          value: $(params.github_repo)
-        - name: github_host
-          value: $(params.github_host)
-        - name: git_commit_msg
-          value: $(params.git_commit_msg)
-        - name: secrets_path
-          value: $(params.secrets_path)
         - name: db2_channel
           value: $(params.db2_channel)
-        - name: avp_aws_secret_region
-          value: $(params.avp_aws_secret_region)
         - name: db2_subscription_install_plan
           value: $(params.db2_subscription_install_plan)
       workspaces:
