--- a/tekton/src/pipelines/gitops/gitops-aiservice-deps.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-aiservice-deps.yml.j2
@@ -56,19 +56,6 @@ spec:
       description: efs action to be performed (provision or deprovision)
       default: ""
 
-    - name: jdbc_type_aiservice
-      type: string
-    - name: jdbc_instance_name_aiservice
-      type: string
-    - name: jdbc_connection_url_aiservice
-      type: string
-      default: ""
-    - name: jdbc_certificate_file_aiservice
-      type: string
-      default: ""
-    - name: jdbc_route_aiservice
-      type: string
-      default: ""
     - name: mas_app_channel_aiservice
       type: string
       default: ""
@@ -79,10 +66,6 @@ spec:
     - name: cluster_url
       type: string
       default: ""
-    - name: db2_action_aiservice
-      type: string
-      description: Set to 'install' to set up a Db2 instance for AI Service
-      default: "none"
 
   tasks:
 {% if wait_for_provision == true %}
@@ -140,6 +123,7 @@ spec:
 
     - name: gitops-provision-mongo
       runAfter:
+        - gitops-efs
       params:
         - name: cluster_name
           value: $(params.cluster_name)
@@ -169,108 +153,5 @@ spec:
           workspace: configs
       when:
         - input: "$(params.mongodb_action)"
-          operator: notin
-          values: [""]
-
-    # Install DB2 database
-    - name: gitops-provision-db2u
-      runAfter:
-        - gitops-provision-mongo
-      params:
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/secrets-params.yml.j2') | indent(8) }}
-
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/git-params.yml.j2') | indent(8) }}        
-        - name: cluster_name
-          value: $(params.cluster_name)
-        - name: cluster_url
-          value: $(params.cluster_url)
-        - name: account
-          value: $(params.account)
-        - name: mas_instance_id
-          value: $(params.mas_instance_id)
-        - name: db2_channel
-          value: $(params.db2_channel)
-      workspaces:
-      - name: configs
-        workspace: configs
-      taskRef:
-        kind: Task
-        name: gitops-db2u
-
-    # DB2 for AI Service
-    - name: gitops-db2u-database-aiservice
-      runAfter:
-        - gitops-provision-db2u
-      params:
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/gitops-params.yml.j2') | indent(8) }}
-
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/secrets-params.yml.j2') | indent(8) }}
-        
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/git-params.yml.j2') | indent(8) }}
-
-        - name: mas_instance_id
-          value: $(params.mas_instance_id)
-        - name: mas_app_id
-          value: aiservice
-
-        - name: jdbc_route
-          value: $(params.jdbc_route_aiservice)
-
-      workspaces:
-        - name: configs
-          workspace: configs
-        - name: shared-gitops-configs
-          workspace: shared-gitops-configs
-      taskRef:
-        kind: Task
-        name: gitops-db2u-database
-      when:
-        - input: "$(params.db2_action_aiservice)"
-          operator: notin
-          values: [""]
-        - input: "$(params.jdbc_type_aiservice)"
-          operator: in
-          values: ["incluster-db2"]
-        - input: "$(params.mas_app_channel_aiservice)"
-          operator: notin
-          values: [""]
-
-    - name: gitops-jdbc-config-aiservice
-      runAfter:
-        - gitops-db2u-database-aiservice
-      params:
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/gitops-params.yml.j2') | indent(8) }}
-
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/secrets-params.yml.j2') | indent(8) }}
-        
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/git-params.yml.j2') | indent(8) }}
-
-        - name: mas_instance_id
-          value: $(params.mas_instance_id)
-        - name: mas_app_id
-          value: aiservice
-        - name: mas_config_scope
-          value: system
-        - name: jdbc_type
-          value: $(params.jdbc_type_aiservice)
-        - name: jdbc_instance_name
-          value: $(params.jdbc_instance_name_aiservice)
-        - name: jdbc_connection_url
-          value: $(params.jdbc_connection_url_aiservice)
-        - name: jdbc_certificate_file
-          value: $(params.jdbc_certificate_file_aiservice)
-      workspaces:
-        - name: configs
-          workspace: configs
-        - name: shared-gitops-configs
-          workspace: shared-gitops-configs
-      taskRef:
-        kind: Task
-        name: gitops-jdbc-config
-      when:
-        - input: "$(params.jdbc_type_aiservice)"
-          operator: notin
-          values: [""]
-        - input: "$(params.mas_app_channel_aiservice)"
           operator: notin
           values: [""]
