--- a/tekton/src/pipelines/gitops/gitops-aiservice-deps.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-aiservice-deps.yml.j2
@@ -65,6 +65,8 @@ spec:
     - name: cluster_url
       type: string
       default: ""
+    - name: mas_instance_id
+      type: string
 
   tasks:
 {% if wait_for_provision == true %}
@@ -106,6 +108,8 @@ spec:
           value: $(params.avp_aws_access_key)
         - name: efs_action
           value: $(params.efs_action)
+        - name: mas_instance_id
+          value: $(params.mas_instance_id)
       workspaces:
         - name: configs
           workspace: configs
