[patch] replace variable for watsonX on prem

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aiservice-tenant.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aiservice-tenant.yaml.j2
@@ -35,7 +35,7 @@ ibm_aiservice_tenant:
   aiservice_watsonxai_url: "{{ AISERVICE_WATSONXAI_URL }}"
   aiservice_watsonxai_project_id: "<path:{{ SECRETS_PATH }}:{{ AISERVICE_WATSONXAI_PROJECT_ID }}>"
   aiservice_watsonxai_apikey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_WATSONXAI_APIKEY }}>"
-  aiservice_watsonxai_full: "{{ AISERVICE_WATSONX_FULL }}"
+  aiservice_watsonxai_on_prem: "{{ AISERVICE_WATSONXAI_ON_PREM }}"
   aiservice_watsonxai_ca_crt: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_WATSONXAI_CA_CRT }}>"
   aiservice_watsonxai_instance_id: "{{ AISERVICE_WATSONX_INSTANCE_ID }}"
   aiservice_watsonxai_username: "{{ AISERVICE_WATSONX_USERNAME }}"
