--- a/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
@@ -230,6 +230,10 @@ spec:
     - name: additional_vpn
       type: string
 
+   # standalone sls
+    - name : sls_service
+      type : string
+      default: ""
   tasks:
 
     # 0. Per-instance DB2U Operator
@@ -444,6 +448,8 @@ spec:
           value: $(params.additional_vpn)
         - name: extensions
           value: $(params.extensions)
+        - name : sls_service
+          value: $(params.sls_service)
       taskRef:
         kind: Task
         name: gitops-suite
@@ -498,6 +504,8 @@ spec:
           value: $(params.mas_bascfg_pod_template_yaml)
         - name: mas_slscfg_pod_template_yaml
           value: $(params.mas_slscfg_pod_template_yaml)
+        - name : sls_service
+          value: $(params.sls_service)
       workspaces:
         - name: configs
           workspace: configs
