--- a/tekton/src/tasks/gitops/gitops-suite.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-suite.yml.j2
@@ -142,6 +142,9 @@ spec:
     - name: extensions
       type: string
       default: "false"
+    - name: sls_service
+      type: string
+      default: ""
   stepTemplate:
     name: gitops-suite
     env:
@@ -253,6 +256,8 @@ spec:
         value: $(params.is_non_shared_cluster)
       - name: EXTENSIONS
         value: $(params.extensions)
+      - name: STANDALONE_SLS_SERVICE
+        value: $(params.sls_service)
 
     envFrom:
       - configMapRef:
