--- a/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
@@ -74,6 +74,8 @@ spec:
 
     - name: jdbc_type_manage
       type: string
+    - name: jdbc_connection_url_additional_params_manage
+      type: string
     - name: jdbc_instance_name_manage
       type: string
     - name: jdbc_connection_url_manage
@@ -93,6 +95,8 @@ spec:
       default: "false"
 
     - name: jdbc_type_facilities
+      type: string
+    - name: jdbc_connection_url_additional_params_facilities
       type: string
     - name: jdbc_instance_name_facilities
       type: string
@@ -1163,6 +1167,8 @@ spec:
           value: $(params.mas_workspace_id)
         - name: jdbc_type
           value: $(params.jdbc_type_manage)
+        - name: jdbc_connection_url_additional_params
+          value: $(params.jdbc_connection_url_additional_params_manage)
         - name: jdbc_instance_name
           value: $(params.jdbc_instance_name_manage)
         - name: jdbc_connection_url
@@ -1462,6 +1468,8 @@ spec:
           value: $(params.mas_workspace_id)
         - name: jdbc_type
           value: $(params.jdbc_type_facilities)
+        - name: jdbc_connection_url_additional_params
+          value: $(params.jdbc_connection_url_additional_params_facilities)
         - name: jdbc_instance_name
           value: $(params.jdbc_instance_name_facilities)
         - name: jdbc_connection_url
