--- a/tekton/src/tasks/gitops/gitops-mas-provisioner.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-mas-provisioner.yml.j2
@@ -50,7 +50,7 @@ spec:
       type: string
     - name: service_port
       type: string
-    - name: csb_ca_certificate_file
+    - name: csb_client_ca_certificate_file
       type: string
     - name: recommend_cluster
       type: string
@@ -108,8 +108,8 @@ spec:
         value: $(params.async_poll_interval)
       - name: ASYNC_POLL_MAX
         value: $(params.async_poll_max)
-      - name: CSB_CA_CERTIFICATE_FILE
-        value: $(params.csb_ca_certificate_file)
+      - name: CSB_CLIENT_CA_CERTIFICATE_FILE
+        value: $(params.csb_client_ca_certificate_file)
       - name: RECOMMEND_CLUSTER
         value: $(params.recommend_cluster)
       - name: PROVISIONER_STORAGE_CLASS
