[patch] fix name

--- a/tekton/src/tasks/gitops/gitops-mas-provisioner.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-mas-provisioner.yml.j2
@@ -116,7 +116,7 @@ spec:
         value: $(params.provisioner_storage_class)
       - name: INSTANA_URL_PREFIX
         value: $(params.instana_url_prefix)
-      - name: GIT_ROOT_CA_CERTIFICATE
+      - name: GIT_ROOT_CA_CERTIFICATE_FILE
         value: $(params.git_root_ca_certificate_file)
       - name: MAS_ANNOTATIONS_REPO_URL
         value: $(params.mas_annotations_repo_url)
