--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/mas-provisioner.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/mas-provisioner.yaml.j2
@@ -6,20 +6,26 @@ mas_provisioner:
   provisioner_domain: "{{ PROVISIONER_DOMAIN }}"
   provisioner_namespace: {{ PROVISIONER_NAMESPACE }}
   provisioner_version: {{ PROVISIONER_VERSION }}
+  storage_class: {{ PROVISIONER_STORAGE_CLASS }}
   enable_mtls: {{ ENABLE_MTLS }}
   service_port: {{ SERVICE_PORT }}
   status_repo_url: {{ STATUS_REPO_URL }}
+  mas_annotations_repo_url: {{ MAS_ANNOTATIONS_REPO_URL }}
   base_branch: {{ BASE_BRANCH }}
   async_poll_interval: {{ ASYNC_POLL_INTERVAL }}
   async_poll_max: {{ ASYNC_POLL_MAX }}
   enable_pd_alert: {{ ENABLE_PD_ALERT }}
   enable_ocm_alert: {{ ENABLE_OCM_ALERT }}
   github_token: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_GITHUB_TOKEN }}>"
-  {% if CSB_CA_CERT is defined and CSB_CA_CERT != "" %}
-  csb_client_ca: {{ CSB_CA_CERT }}
+  {% if GIT_ROOT_CA_CERTIFICATE is defined and GIT_ROOT_CA_CERTIFICATE != "" %}
+  git_root_ca: {{ GIT_ROOT_CA_CERTIFICATE }}
+  {% endif %}
+  {% if CSB_CLIENT_CA_CERT is defined and CSB_CLIENT_CA_CERT != "" %}
+  csb_client_ca: {{ CSB_CLIENT_CA_CERT }}
   {% endif %}
   {% if SECRET_KEY_INSTANA_API is defined and SECRET_KEY_INSTANA_API != "" %}
   instana_api_token: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_INSTANA_API }}>"
+  instana_url_prefix: {{ INSTANA_URL_PREFIX }}
   {% endif %}
   {% if SECRET_KEY_OCM_API is defined and SECRET_KEY_OCM_API != "" %}
   ocm_api_token: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_OCM_API }}>"
