--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-suite.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-suite.yaml.j2
@@ -95,3 +95,9 @@ ibm_mas_suite:
 {% if INTERNAL_CERTIFICATE_AUTHORITY is defined and INTERNAL_CERTIFICATE_AUTHORITY != '' %}
   internal_certificate_authority: {{ INTERNAL_CERTIFICATE_AUTHORITY }}
 {% endif %}
+
+
+{% if WELCOME_MESSAGE is defined and WELCOME_MESSAGE != '' %}
+  welcome_message: |
+    {{ WELCOME_MESSAGE }}
+{% endif %}
