--- a/tekton/src/tasks/gitops/gitops-iac-efs.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-efs.yml.j2
@@ -41,8 +41,10 @@ spec:
       type: string
     - name: efs_lifecycle_policy_transition_to_ia
       type: string
+      default: ""
     - name: efs_lifecycle_policy_transition_to_primary_storage_class
       type: string
+      default: ""
     - name: efs_throughput_mode
       type: string
     - name: efs_encrypted
