--- a/tekton/src/tasks/gitops/gitops-app-config.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-app-config.yml.j2
@@ -26,10 +26,6 @@ spec:
       type: string
     - name: mas_instance_id
       type: string
-    - name: mas_app_id
-      type: string
-    - name: mas_config_scope
-      type: string
     - name: mas_workspace_id
       type: string
       default: ""
@@ -65,10 +61,6 @@ spec:
         value: $(params.avp_aws_secret_region)
       - name: MAS_INSTANCE_ID
         value: $(params.mas_instance_id)
-      - name: MAS_APP_ID
-        value: $(params.mas_app_id)
-      - name: MAS_CONFIG_SCOPE
-        value: $(params.mas_config_scope)
       - name: MAS_WORKSPACE_ID
         value: $(params.mas_workspace_id)
       - name: MAF_ENABLED
@@ -86,6 +78,8 @@ spec:
   steps:
     - args:
       - |-
+        mkdir -p /tmp/init-app-config
+
         git config --global user.name "MAS Automation"
         git config --global user.email "you@example.com"
         git config --global user.password $GITHUB_PAT
@@ -95,7 +89,6 @@ spec:
           --cluster-id "$CLUSTER_ID" \
           --mas-instance-id "$MAS_INSTANCE_ID" \
           --mas-workspace-id "$MAS_WORKSPACE_ID" \
-          --mas-app-id "$MAS_APP_ID" \
           --secrets-path "$SECRETS_PATH" \
           --github-push \
           --github-host "$GITHUB_HOST" \
@@ -103,9 +96,9 @@ spec:
           --github-repo "$GITHUB_REPO" \
           --git-branch "$GIT_BRANCH" \
           --config-action upsert \
-          --mas-config-scope "$MAS_CONFIG_SCOPE" \
+          --mas-config-scope system \
           --mas-config-type appcfg \
-          --dir /tmp/init-app-config-$MAS_APP_ID
+          --dir /tmp/init-app-config
 
         exit $?
       command:
