--- a/tekton/src/tasks/gitops/gitops-delete-app-config.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-delete-app-config.yml.j2
@@ -23,10 +23,6 @@ spec:
       type: string
     - name: mas_instance_id
       type: string
-    - name: mas_app_id
-      type: string
-    - name: mas_config_scope
-      type: string
     - name: mas_workspace_id
       type: string
       default: ""
@@ -53,10 +49,6 @@ spec:
         value: $(params.avp_aws_secret_region)
       - name: MAS_INSTANCE_ID
         value: $(params.mas_instance_id)
-      - name: MAS_APP_ID
-        value: $(params.mas_app_id)
-      - name: MAS_CONFIG_SCOPE
-        value: $(params.mas_config_scope)
       - name: MAS_WORKSPACE_ID
         value: $(params.mas_workspace_id)
     envFrom:
@@ -68,6 +60,7 @@ spec:
   steps:
     - args:
       - |-
+        mkdir -p /tmp/init-app-config
         git config --global user.name "MAS Automation"
         git config --global user.email "you@example.com"
         git config --global user.password $GITHUB_PAT
@@ -85,10 +78,10 @@ spec:
           --github-repo "$GITHUB_REPO" \
           --git-branch "$GIT_BRANCH" \
           --config-action remove \
-          --mas-config-scope "$MAS_CONFIG_SCOPE" \
+          --mas-config-scope system \
           --mas-config-type appcfg \
-          --dir /tmp/delete-app-config-$MAS_APP_ID
-
+          --dir /tmp/init-app-config
+          
         exit $?
       command:
         - /bin/sh
