--- a/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
@@ -800,7 +800,9 @@ spec:
           workspace: configs
         - name: shared-additional-configs
           workspace: shared-additional-configs
-
+        - name: shared-gitops-configs
+          workspace: shared-gitops-configs
+          
     # -------------------------------------------------------------------------
     # Deprovision task section
     # -------------------------------------------------------------------------
