--- a/tekton/src/pipelines/mas-fvt-facilities.yml.j2
+++ b/tekton/src/pipelines/mas-fvt-facilities.yml.j2
@@ -43,12 +43,6 @@ spec:
     - name: fvt_digest_facilities
       type: string
       default: ""
-    # - name: fvt_digest_facilities_pytest
-    #   type: string
-    #   default: ""
-    # - name: fvt_digest_facilities_cypress
-    #   type: string
-    #   default: ""
 
     - name: ivt_digest_core
       type: string
@@ -103,6 +97,47 @@ spec:
           workspace: shared-configs
         - name: pod-templates
           workspace: shared-pod-templates
+
+    # 2. Prepare data 
+    # -----------------------------------------------------------------------------
+    - name: fvt-facilities
+      params:
+        - name: mas_instance_id
+          value: $(params.mas_instance_id)
+        - name: mas_workspace_id
+          value: $(params.mas_workspace_id)
+        - name: fvt_image_registry
+          value: $(params.fvt_image_registry)
+        - name: fvt_image_namespace
+          value: fvt-facilities
+        - name: fvt_image_name
+          value: fvt-ibm-mas-facilities 
+        - name: fvt_image_digest
+          value: $(params.fvt_digest_facilities)
+        - name: fvt_test_suite
+          value: facilities_fvt
+        - name: product_channel
+          value: $(params.mas_app_channel_facilities)
+        - name: product_id
+          value: ibm-mas-facilities
+
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-fvt-run-suite
+      # Only if we've set a digest of the Facilities FVT to run
+      when:
+        - input: "$(params.fvt_digest_facilities)"
+          operator: notin
+          values: [""]
+        - input: "$(params.mas_app_channel_facilities)"
+          operator: notin
+          values: [""]
+      runAfter:
+        - ivtcore-facilities
+      workspaces:
+        - name: configs
+          workspace: shared-configs
 
   finally:
     # 1. Run CV
