[patch] Add post-install-verify to AI Service install pipeline

--- a/tekton/src/pipelines/aiservice-install.yml.j2
+++ b/tekton/src/pipelines/aiservice-install.yml.j2
@@ -105,12 +105,11 @@ spec:
         - aiservice
 
 
-    # 8. AI Service Post Verification
+    # 8. Verify health of the cluster before we consider the install complete
     # -------------------------------------------------------------------------
-    {{ lookup('template', pipeline_src_dir ~ '/taskdefs/aiservice/aiservice-post-verify.yml.j2') | indent(4) }}
+    {{ lookup('template', pipeline_src_dir ~ '/taskdefs/cluster-setup/ocp-verify.yml.j2', template_vars={'name': 'post-install-verify', 'devops_suite_name': 'post-install-verify'}) | indent(4) }}
       runAfter:
         - aiservice-tenant
-
 
   finally:
     # Update synchronization configmap
