[patch] Always pull latest cli image while deprovisioning

--- a/tekton/src/tasks/gitops/gitops-deprovision-rosa.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-deprovision-rosa.yml.j2
@@ -45,7 +45,7 @@ spec:
         - /bin/sh
         - -c
       name: gitops-deprovision-rosa
-      imagePullPolicy: IfNotPresent
+      imagePullPolicy: Always
       image: quay.io/ibmmas/cli:latest
   workspaces:
     - name: configs
