--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-efs.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-efs.yaml.j2
@@ -8,15 +8,12 @@ module "efs" {
   efs_mount_count  = "{{EFS_MOUNT_COUNT}}"
 
   lifecycle_policy = {
-    {% if EFS_LIFECYCLE_POLICY_TRANSITION_TO_IA is defined and EFS_LIFECYCLE_POLICY_TRANSITION_TO_IA
-     | trim != '' %}
-    transition_to_ia                    = "{{EFS_LIFECYCLE_POLICY_TRANSITION_TO_IA}}"
-    {% endif %}
-
-    {% if EFS_LIFECYCLE_POLICY_TRANSITION_TO_PRIMARY_STORAGE_CLASS is defined and
-    EFS_LIFECYCLE_POLICY_TRANSITION_TO_PRIMARY_STORAGE_CLASS | trim != '' %}
+    {%- if EFS_LIFECYCLE_POLICY_TRANSITION_TO_IA is defined and EFS_LIFECYCLE_POLICY_TRANSITION_TO_IA | trim != '' %}
+    transition_to_ia = "{{EFS_LIFECYCLE_POLICY_TRANSITION_TO_IA}}"
+    {%- endif %}
+    {%- if EFS_LIFECYCLE_POLICY_TRANSITION_TO_PRIMARY_STORAGE_CLASS is defined and EFS_LIFECYCLE_POLICY_TRANSITION_TO_PRIMARY_STORAGE_CLASS | trim != '' %}
     transition_to_primary_storage_class = "{{EFS_LIFECYCLE_POLICY_TRANSITION_TO_PRIMARY_STORAGE_CLASS}}"
-    {% endif %}
+    {%- endif %}
   }
 
     throughput_mode              = "{{EFS_THROUGHPUT_MODE}}"
